--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon server.js",
-    "prod": "NODE_ENV=production nodemon server.js"
+    "prod": "NODE_ENV=production nodemon server.js",
+    "update-basic": "node ./api/landlord_basic_form/basic_form_update.js",
+    "update-advanced": "node ./api/landlord_advanced_form/advanced_form_update.js",
+    "update-seeking": "node ./api/landlord_seeking_form/seeking_form_update.js",
+    "test-basic": "node ./api/landlord_basic_form/basic_form_test.js",
+    "test-advanced": "node ./api/landlord_advanced_form/advanced_form_test.js",
+    "test-seeking": "node ./api/landlord_seeking_form/seeking_form_test.js"
   },
   "engines": {
     "node": "6.9.0"
