--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node_Ultimate",
+  "name": "RentHero_Mappings_Manager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
