--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test-basic": "node ./api/landlord_basic_form/basic_form_test.js",
     "test-advanced": "node ./api/landlord_advanced_form/advanced_form_test.js",
     "test-seeking": "node ./api/landlord_seeking_form/seeking_form_test.js",
-    "test-sql": "node ./api/dialogflow_sql_match/dialogflow_sql_test.js"
+    "test-sql": "node ./api/dialogflow_sql_match/dialogflow_sql_test.js",
+
+    "test-domains": "node ./api/knowledge_domains/knowledge_domains_test.js",
+    "update-domains": "node ./api/knowledge_domains/knowledge_domains_update.js"
   },
   "engines": {
     "node": "6.9.0"
