--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test-seeking": "node ./api/landlord_seeking_form/seeking_form_test.js",
     "test-sql": "node ./api/dialogflow_sql_match/dialogflow_sql_test.js",
     "test-domains": "node ./api/knowledge_domains/knowledge_domains_test.js",
-    "update-domains": "node ./api/knowledge_domains/knowledge_domains_update.js"
+    "update-domains": "node ./api/knowledge_domains/knowledge_domains_update.js",
+    "download-intents": "NODE_ENV=development node ./api/dialogflow_intent_ripper/agent_intent.js"
   },
   "engines": {
     "node": "6.9.0"
