--- a/package.json
+++ b/package.json
@@ -7,17 +7,7 @@
     "dev": "NODE_ENV=development node index.js",
     "staging": "NODE_ENV=staging node index.js",
     "prod": "NODE_ENV=production node index.js",
-    "update-basic": "node ./api/landlord_basic_form/basic_form_update.js",
-    "update-advanced": "node ./api/landlord_advanced_form/advanced_form_update.js",
-    "update-seeking": "node ./api/landlord_seeking_form/seeking_form_update.js",
-    "update-sql": "node ./api/dialogflow_sql_match/dialogflow_sql_update.js",
-    "test-basic": "node ./api/landlord_basic_form/basic_form_test.js",
-    "test-advanced": "node ./api/landlord_advanced_form/advanced_form_test.js",
-    "test-seeking": "node ./api/landlord_seeking_form/seeking_form_test.js",
-    "test-sql": "node ./api/dialogflow_sql_match/dialogflow_sql_test.js",
-    "test-domains": "node ./api/knowledge_domains/knowledge_domains_test.js",
-    "update-domains": "node ./api/knowledge_domains/knowledge_domains_update.js",
-    "download-intents": "NODE_ENV=development node ./api/dialogflow_intent_ripper/agent_intent.js"
+    "dangerously-update": "NODE_ENV=staging node uploadIntent.js"
   },
   "engines": {
     "node": "6.9.0"
