--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,44 @@ node_modules/*
 credentials/*
 .env
 .DS_STORE
+
+api/dialogflow_intent_ripper/development/intents/*
+api/dialogflow_intent_ripper/staging/intents/*
+api/dialogflow_intent_ripper/production/intents/*
+
+api/knowledge_domains/development/json/*
+api/knowledge_domains/development/templates/*
+api/knowledge_domains/staging/json/*
+api/knowledge_domains/staging/templates/*
+api/knowledge_domains/production/json/*
+api/knowledge_domains/production/templates/*
+
+api/landlord_basic_form/development/json/*
+api/landlord_basic_form/development/results/*
+api/landlord_basic_form/development/templates/*
+api/landlord_basic_form/staging/json/*
+api/landlord_basic_form/staging/results/*
+api/landlord_basic_form/staging/templates/*
+api/landlord_basic_form/production/json/*
+api/landlord_basic_form/production/results/*
+api/landlord_basic_form/production/templates/*
+
+api/landlord_advanced_form/development/json/*
+api/landlord_advanced_form/development/results/*
+api/landlord_advanced_form/development/templates/*
+api/landlord_advanced_form/staging/json/*
+api/landlord_advanced_form/staging/results/*
+api/landlord_advanced_form/staging/templates/*
+api/landlord_advanced_form/production/json/*
+api/landlord_advanced_form/production/results/*
+api/landlord_advanced_form/production/templates/*
+
+api/landlord_seeking_form/development/json/*
+api/landlord_seeking_form/development/results/*
+api/landlord_seeking_form/development/templates/*
+api/landlord_seeking_form/staging/json/*
+api/landlord_seeking_form/staging/results/*
+api/landlord_seeking_form/staging/templates/*
+api/landlord_seeking_form/production/json/*
+api/landlord_seeking_form/production/results/*
+api/landlord_seeking_form/production/templates/*
