--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "engines": {
     "node": "6.9.0"
   },
-  "author": "",
+  "author": "RentHero",
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.0",
